增加docker环境变量